# seli

./: .gitignore  .pre-commit-config.yaml  README.md  build_docs.sh  main.py  module.py  pyproject.toml  test.py
.github/workflows/: publish.yml  pytest.yml
docs/: Makefile  api.md  conf.py  index.md  net.md  opt.md  seli.md  usage.md
docs/_static/: custom.css
examples/: classification_2d.py  energy_based_model_1d.py  flow_matching_ot_1d.py  generative_adversarial_net_1d.py  maximum_mean_discrepancy.py  normalizing_flow_1d.py.py  regression_1d.py  rosenbrock.py  simple_convex_optimization.py  supervised_2d.py  utils.py
paper/: default.tex  pandoc.py  paper.md  references.bib  template.tex
src/seli/: README.md  __init__.py  _env.py  _module.py  _registry.py  _serialize.py  core.py
src/seli/core/: _jit.py  _module.py  _registry.py  _serialize.py  _utils.py
src/seli/net/: __init__.py  _attention.py  _einops.py  _init.py  _initializers.py  _key.py  _linear.py  _norm.py  _param.py  _transform.py
src/seli/opt/: __init__.py  _adagrad.py  _adam.py  _grad.py  _loss.py  _momentum.py  _nesterov.py  _opt.py  _rmsprop.py  _sgd.py
tests/: __init__.py  test_attention.py  test_core.py  test_flatten.py  test_grad.py  test_jit.py  test_key.py  test_key_from_str.py  test_linear.py  test_module.py  test_norm.py  test_serialize.py
